tests/__snapshots__/api-toBeNever.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeNever: stderr 1`] = `
"Error: Type 'string' is not 'never'.

  12 |   expect(returnsNever()).type.toBeNever();
  13 | 
> 14 |   expect(returnsString()).type.toBeNever();
     |                                ^
  15 | });
  16 | 
  17 | test("is NOT never?", () => {

       at ./__typetests__/toBeNever.test.ts:14:32 ❭ is never?

Error: Type 'never' is 'never'.

  18 |   expect(returnsString()).type.not.toBeNever();
  19 | 
> 20 |   expect(returnsNever()).type.not.toBeNever();
     |                                   ^
  21 | });
  22 | 

       at ./__typetests__/toBeNever.test.ts:20:35 ❭ is NOT never?

"
`;

exports[`toBeNever: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeNever.test.ts
  × is never?
  × is NOT never?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
